--- a/src/WindowsTerminalShaderTool/WindowsTerminalShaderTool.csproj
+++ b/src/WindowsTerminalShaderTool/WindowsTerminalShaderTool.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <AssemblyName>wt-shader-tool</AssemblyName>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -29,6 +30,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
     <PackageReference Include="Terminal.Gui" Version="1.*" />
   </ItemGroup>
 
