--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+launchSettings.json
+nupkg/
+tools/
+
 # User-specific files
 *.rsuser
 *.suo
