Upgraded to .net8

--- a/src/WindowsTerminalShaderTool/WindowsTerminalShaderTool.csproj
+++ b/src/WindowsTerminalShaderTool/WindowsTerminalShaderTool.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <AssemblyName>wt-shader-tool</AssemblyName>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -31,7 +31,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
-    <PackageReference Include="Terminal.Gui" Version="1.*" />
+    <PackageReference Include="Terminal.Gui" Version="1.17.1" />
   </ItemGroup>
 
   <ItemGroup>
